fix menu & floating button styles on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -894,7 +894,7 @@ form.switchboard-form::before {
   position: absolute;
   bottom: var(--footer-height);
   right: 2rem;
-  z-index: 1066;
+  z-index: 1023;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -961,7 +961,7 @@ form.switchboard-form::before {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-divider-margin-y: 0.5rem;
   --bs-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  --bs-dropdown-link-color: #fff;
+  --bs-dropdown-link-color: #E6E7E8;
   --bs-dropdown-link-hover-color: #fff;
   --bs-dropdown-link-hover-bg: transparent;
   --bs-dropdown-link-active-color: #fff;
@@ -980,9 +980,9 @@ form.switchboard-form::before {
   left: 0;
   right: 0;
   bottom: 0;
-    background-image: linear-gradient(rgba(59, 34, 95, 0) 0%, rgba(60, 36, 96, 0.11) 25%, rgba(65, 42, 100, 0.18) 39%, rgba(73, 53, 107, 0.23) 51%, rgba(85, 67, 119, 0.27) 61%, rgba(103, 87, 135, 0.32) 70%, rgba(127, 114, 156, 0.36) 79%, rgba(161, 152, 185, 0.39) 87%, rgba(207, 203, 221, 0.43) 95%, rgba(255, 255, 255, 0.45) 100%);
-    height: 50px;
-    pointer-events: none;
+  background-image: linear-gradient(rgba(59, 34, 95, 0) 0%, rgba(60, 36, 96, 0.11) 25%, rgba(65, 42, 100, 0.18) 39%, rgba(73, 53, 107, 0.23) 51%, rgba(85, 67, 119, 0.27) 61%, rgba(103, 87, 135, 0.32) 70%, rgba(127, 114, 156, 0.36) 79%, rgba(161, 152, 185, 0.39) 87%, rgba(207, 203, 221, 0.43) 95%, rgba(255, 255, 255, 0.45) 100%);
+  height: 50px;
+  pointer-events: none;
 }
 
 .events-accordion .accordion-button {
@@ -1035,6 +1035,7 @@ a:hover {
     opacity: 1;
     height: calc(var(--vh) - calc(var(--navbar-height) + var(--footer-height)))
   }
+
   .fancybox__container {
     --panel-title-width: 0vw;
   }
@@ -1084,4 +1085,22 @@ a:hover {
 
 .recaptcha-info {
   margin-top: .5rem;
+}
+
+@media (max-width: 991px) {
+  .dropdown-item {
+    font-size: 1.6rem;
+  }
+
+  .dropdown-menu:after {
+    display: none;
+  }
+
+  .dropdown-menu {
+    padding-left: 1rem;
+  }
+
+  .floating-button .content {
+    max-height: calc(92vh - calc(var(--navbar-height) + var(--footer-height)));
+  }
 }
